<resources>
    <string name="app_name">RentalApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_property_list">Properties</string>
    <string name="title_property_detail">Property Detail</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_hint">Search houses</string>

    <string name="action_filter">Filter</string>
    <string name="action_save_search">Save Search</string>
    <string name="action_my_location">Current location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>


    <string name="title_text">Welcome to Your Next Home Finder\n\nUse Google Sign-In</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <!--<string name="signed_out">Signed out</string>-->
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>


    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="title_activity_create_new_property">CreateNewPropertyActivity</string>

    <string name="post_title">Enter Your Property Details:</string>
    <string name="post_caption">Enter Tag Line</string>
    <string name="post_description">Enter Small Description</string>
    <string name="post_address">Address</string>
    <string name="post_bedrooms">BedRooms</string>
    <string name="post_bathrooms">Bathrooms</string>
    <string name="post_submit">Submit Details</string>
    <string name="post_area">Area(sft)</string>
    <string name="post_area_units">SFT</string>
    <string name="post_apttype">Apartment Type</string>
    <string name="post_phone_number">Enter Contact Number</string>
    <string name="post_email_id">Enter Email</string>
    <string name="post_contact_details">Contact Details</string>
    <string name="post_rent">Rent(USD)</string>
    <string name="post_rent_format">00000.00</string>
    <string name="post_edit">EDIT POST</string>
    <string name="post_cancelled">MARK AS SOLD OUT</string>
    <string name="post_available">MARK AS AVAILABLE</string>
    <!--address-->
    <string name="post_line">Enter Street Name</string>
    <string name="post_city">Enter City</string>
    <string name="post_state">Enter State (E.g. CA)</string>
    <string name="post_zip">Enter ZIP code(95113)</string>
    <!--address end-->

    <!--Apartment Type-->
    <string name="house">House</string>
    <string name="townhouse">Townhouse</string>
    <string name="apartment">Apartment</string>
    <string name="condo">Condo</string>
    <!--end apartment-->

    <string name="post_success">Posted Successfully</string>
    <string name="post_fail">Failed to submit. Please try again.!</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>

    <string name="no_data_available">No Matching Listings</string>

    <string name="title_activity_post_successscreen">PostSuccessscreenActivity</string>
    <string name="post_success_button">Done</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
