<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:scrollbars="vertical"
    app:layoutManager="LinearLayoutManager"
    tools:context=".createpost.CreateNewPropertyFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_title"
            android:textColor="@color/custom_form_labels"
            android:textSize="10pt"/>

        <EditText
            android:id="@+id/post_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_caption" />

        <EditText
            android:id="@+id/post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/post_description"
            android:inputType="textMultiLine" />

    <include layout="@layout/content_areainfo_layout"/>
    <include layout="@layout/address_layout"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/propertyImage"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Attach Image"
            android:id="@+id/attach_image_button"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:drawableRight="@drawable/ic_attachment_white_24dp"
            />

        <Button
            android:id="@+id/post_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/post_submit"
            android:drawableRight="@drawable/ic_publish_white_24dp"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

    </LinearLayout>
</ScrollView>

